[tool.poetry]
name = "skpm-benchmark"
version = "0.1.0"
description = ""
authors = ["Alireza <siralirezagh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
skpm = {path = "/home/alireza/p/thesis.v.2/skpm"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
