[tool.poetry]
name = "skpm-benchmark"
version = "0.1.0"
description = ""
authors = ["Alireza <siralirezagh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
skpm = {path = "../skpm"}
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
